--- a/Jal.Aop.Aspects/Jal.Aop.Aspects.csproj
+++ b/Jal.Aop.Aspects/Jal.Aop.Aspects.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Raul Naupari</Authors>
-    <Version>2.0.0</Version>
+    <Version>2.1.0</Version>
     <Company>Raul Naupari</Company>
     <Description>Useful aspects created based on the Jal.Aop library</Description>
     <Copyright />
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.23" />
   </ItemGroup>
 
   <ItemGroup>
