--- a/Jal.Aop.Aspects.Logger/Jal.Aop.Aspects.Logger.csproj
+++ b/Jal.Aop.Aspects.Logger/Jal.Aop.Aspects.Logger.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Common.Logging.Core" Version="3.4.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
   <ItemGroup>
